--- a/_config.yml
+++ b/_config.yml
@@ -37,16 +37,16 @@ author:
   type      : person                    # "person" (default), "organization"
   name      : 侯林涛
   url       : https://hoult14.github.io
-  avatar    : screenshot.jpg            # path or url of avatar image (square)
-  bio       : 我是一个正经人.
+  avatar    : #screenshot.jpg            # path or url of avatar image (square)
+  bio       : 网站的作者.
   email     : hoult14@163.com
   facebook  :                           # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   :                           # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
-  weibo     :                           # "user_id"   the last part of your profile url, e.g. https://www.weibo.com/user_id/profile?...
+  weibo     : 5679442189                # "user_id"   the last part of your profile url, e.g. https://www.weibo.com/user_id/profile?...
   googleplus:                           # "user_id"   the last part of your profile url, e.g. https://plus.google.com/u/0/user_id
   telegram  :                           # "user_name" the last part of your profile url, e.g. https://t.me/user_name
   medium    :                           # "user_name" the last part of your profile url, e.g. https://medium.com/user_name
-  zhihu     :                           # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
+  zhihu     : mu-sheng-shui             # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
   douban    :                           # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
   linkedin  :                           # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
   github    : hoult14                   # "user_name" the last part of your profile url, e.g. https://github.com/user_name
