--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 
 
 
-theme: jekyll-text-theme
+# theme: jekyll-text-theme
 ## => Site Settings
 ##############################
 text_skin: forest # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
